// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/platform/gitea/index createPr should use base branch by default 1`] = `
{
  "bodyStruct": {
    "hash": "9d586a6aedc4e7cb205276933c9e474cd3c2b341d3340458c31eb750795f197d",
  },
  "cannotMergeReason": undefined,
  "createdAt": "2014-04-01T05:14:20Z",
  "displayNumber": "Pull Request #42",
  "hasAssignees": false,
  "isDraft": false,
  "number": 42,
  "sha": "0d9c7726c3d628b7e28af234595cfd20febdbf8e",
  "sourceBranch": "pr-branch",
  "sourceRepo": "some/repo",
  "state": "open",
  "targetBranch": "devel",
  "title": "pr-title",
}
`;

exports[`modules/platform/gitea/index createPr should use default branch if requested 1`] = `
{
  "bodyStruct": {
    "hash": "9d586a6aedc4e7cb205276933c9e474cd3c2b341d3340458c31eb750795f197d",
  },
  "cannotMergeReason": undefined,
  "createdAt": "2014-04-01T05:14:20Z",
  "displayNumber": "Pull Request #42",
  "hasAssignees": false,
  "isDraft": false,
  "number": 42,
  "sha": "0d9c7726c3d628b7e28af234595cfd20febdbf8e",
  "sourceBranch": "pr-branch",
  "sourceRepo": "some/repo",
  "state": "open",
  "targetBranch": "master",
  "title": "pr-title",
}
`;

exports[`modules/platform/gitea/index getPr should fallback to direct fetching if cache fails 1`] = `
{
  "bodyStruct": {
    "hash": "f41557d6153a316ee747e13de8952c4068de931585c1a18d095d6703254de6af",
  },
  "cannotMergeReason": "pr.mergeable="false"",
  "createdAt": "2015-03-22T20:36:16Z",
  "displayNumber": "Pull Request #1",
  "hasAssignees": false,
  "isDraft": false,
  "number": 1,
  "sha": "some-head-sha",
  "sourceBranch": "some-head-branch",
  "sourceRepo": "some/repo",
  "state": "open",
  "targetBranch": "some-base-branch",
  "title": "Some PR",
}
`;

exports[`modules/platform/gitea/index getPr should return enriched pull request which exists if open 1`] = `
{
  "bodyStruct": {
    "hash": "f41557d6153a316ee747e13de8952c4068de931585c1a18d095d6703254de6af",
  },
  "cannotMergeReason": undefined,
  "createdAt": "2015-03-22T20:36:16Z",
  "displayNumber": "Pull Request #1",
  "hasAssignees": false,
  "isDraft": false,
  "number": 1,
  "sha": "some-head-sha",
  "sourceBranch": "some-head-branch",
  "sourceRepo": "some/repo",
  "state": "open",
  "targetBranch": "some-base-branch",
  "title": "Some PR",
}
`;

exports[`modules/platform/gitea/index getPrList should filter list by creator 1`] = `
{
  "endpoint": "https://gitea.com/",
  "gitAuthor": "Renovate Bot <renovate@example.com>",
}
`;

exports[`modules/platform/gitea/index getPrList should filter list by creator 2`] = `
[
  {
    "bodyStruct": {
      "hash": "f41557d6153a316ee747e13de8952c4068de931585c1a18d095d6703254de6af",
    },
    "cannotMergeReason": undefined,
    "createdAt": "2015-03-22T20:36:16Z",
    "displayNumber": "Pull Request #1",
    "hasAssignees": false,
    "isDraft": false,
    "number": 1,
    "sha": "some-head-sha",
    "sourceBranch": "some-head-branch",
    "sourceRepo": "some/repo",
    "state": "open",
    "targetBranch": "some-base-branch",
    "title": "Some PR",
  },
  {
    "bodyStruct": {
      "hash": "916e5965a20785df1883ff5dc219508a1070ae1f37ccb64e954526f3ca1d22f4",
    },
    "cannotMergeReason": undefined,
    "createdAt": "2011-08-18T22:30:38Z",
    "displayNumber": "Pull Request #2",
    "hasAssignees": false,
    "isDraft": false,
    "number": 2,
    "sha": "other-head-sha",
    "sourceBranch": "other-head-branch",
    "sourceRepo": "some/repo",
    "state": "closed",
    "targetBranch": "other-base-branch",
    "title": "Other PR",
  },
  {
    "bodyStruct": {
      "hash": "916e5965a20785df1883ff5dc219508a1070ae1f37ccb64e954526f3ca1d22f4",
    },
    "cannotMergeReason": undefined,
    "createdAt": "2011-08-18T22:30:39Z",
    "displayNumber": "Pull Request #3",
    "hasAssignees": false,
    "isDraft": true,
    "number": 3,
    "sha": "draft-head-sha",
    "sourceBranch": "draft-head-branch",
    "sourceRepo": "some/repo",
    "state": "open",
    "targetBranch": "draft-base-branch",
    "title": "Draft PR",
  },
]
`;

exports[`modules/platform/gitea/index getPrList should return list of pull requests 1`] = `
[
  {
    "bodyStruct": {
      "hash": "f41557d6153a316ee747e13de8952c4068de931585c1a18d095d6703254de6af",
    },
    "cannotMergeReason": undefined,
    "createdAt": "2015-03-22T20:36:16Z",
    "displayNumber": "Pull Request #1",
    "hasAssignees": false,
    "isDraft": false,
    "number": 1,
    "sha": "some-head-sha",
    "sourceBranch": "some-head-branch",
    "sourceRepo": "some/repo",
    "state": "open",
    "targetBranch": "some-base-branch",
    "title": "Some PR",
  },
  {
    "bodyStruct": {
      "hash": "916e5965a20785df1883ff5dc219508a1070ae1f37ccb64e954526f3ca1d22f4",
    },
    "cannotMergeReason": undefined,
    "createdAt": "2011-08-18T22:30:38Z",
    "displayNumber": "Pull Request #2",
    "hasAssignees": false,
    "isDraft": false,
    "number": 2,
    "sha": "other-head-sha",
    "sourceBranch": "other-head-branch",
    "sourceRepo": "some/repo",
    "state": "closed",
    "targetBranch": "other-base-branch",
    "title": "Other PR",
  },
  {
    "bodyStruct": {
      "hash": "916e5965a20785df1883ff5dc219508a1070ae1f37ccb64e954526f3ca1d22f4",
    },
    "cannotMergeReason": undefined,
    "createdAt": "2011-08-18T22:30:39Z",
    "displayNumber": "Pull Request #3",
    "hasAssignees": false,
    "isDraft": true,
    "number": 3,
    "sha": "draft-head-sha",
    "sourceBranch": "draft-head-branch",
    "sourceRepo": "some/repo",
    "state": "open",
    "targetBranch": "draft-base-branch",
    "title": "Draft PR",
  },
]
`;

exports[`modules/platform/gitea/index initPlatform() should support custom endpoint 1`] = `
{
  "endpoint": "https://gitea.renovatebot.com/",
  "gitAuthor": "Renovate Bot <renovate@example.com>",
}
`;

exports[`modules/platform/gitea/index initPlatform() should support default endpoint 1`] = `
{
  "endpoint": "https://gitea.com/",
  "gitAuthor": "Renovate Bot <renovate@example.com>",
}
`;

exports[`modules/platform/gitea/index initPlatform() should use username as author name if full name is missing 1`] = `
{
  "endpoint": "https://gitea.com/",
  "gitAuthor": "renovate <renovate@example.com>",
}
`;

exports[`modules/platform/gitea/index initRepo should fall back to merge method "merge" 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "c48ad9428365701f1a7f4798a410db2401b13267c205e345beb5b469a4a1480b163e1ce663ce483cfe579b2748a807cbeeba2035dc55eca5fe46d60d182510ec",
}
`;

exports[`modules/platform/gitea/index initRepo should fall back to merge method "rebase-merge" 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "c48ad9428365701f1a7f4798a410db2401b13267c205e345beb5b469a4a1480b163e1ce663ce483cfe579b2748a807cbeeba2035dc55eca5fe46d60d182510ec",
}
`;

exports[`modules/platform/gitea/index initRepo should fall back to merge method "squash" 1`] = `
{
  "defaultBranch": "master",
  "isFork": false,
  "repoFingerprint": "c48ad9428365701f1a7f4798a410db2401b13267c205e345beb5b469a4a1480b163e1ce663ce483cfe579b2748a807cbeeba2035dc55eca5fe46d60d182510ec",
}
`;
